Added search + bug fiex
